src/assets/sass_re/_common.scss
body .layout-wrapper {
  // background-image: url('/assets/layout/images/bg-header-01.png');
  // background-size: cover;
  // background-color: #03A9F4;
}

h1, h2, h3 {
  font-weight: 400;
}

.header-bg{
  // background-image: url('/assets/layout/images/login/children-cricket-9.jpg');
  // background-size: cover;
  // background-color: #03A9F4;
}
.page-header {
  color: #03A9F4;
}

.delete-icon{
  color: #BF2E1A;
}

.page-title{
  width: 100%;
  height: 24px;
  background: white; // #026cb6;
  background: linear-gradient(90deg, #026CB6, #3E94CE);
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.25);

  padding: 15px 24px;
  padding-right: 8px;
  margin-top: -21px;
  margin-left: -16px;
  margin-bottom: 20px;

  h1 {
    margin: 0;
    // color: #026cb6; //  #777d81; // white;
    color: white;
    font-size: 1.5em;
    font-weight: 300;
    line-height: 1.0em;
  }
}

.section-title {
  margin: 0 10px 10px;
  font-weight: 400;
  color: #777777;
}

label {
  &.minimal {
    font-size: 0.75em;
    color: #4d4d4f;
    margin-bottom: -2px;

    &.primary{
      color: #1A87BF;
    }
  }
}

.primary{
  color: #1A87BF;
}
.smaller {
  font-size: 0.8em;
}

.muted-label{
  font-size: 0.8em;
  color: #777777;
}

.muted {
  color: #777777;
}

.col-button {
  width: 7%;
  text-align: center;
}
.col-check {
  width: 5%;
  text-align: center;
}
.col-icon {
  width: 38px;
  text-align: center;
}

// BUTTONS -------------------------
body {
  .ui-button {
    &.secondary.outline {
      background: white;
      color: #026cb6;
      border: #026cb6 2px solid;
      border-radius: 0;
      font-weight: 400;
    }

  }

  .ui-button .fa {
    color: inherit;
  }
}

// DATA TABLE
body .ui-datatable {
  color: #505050;
  font-size: 0.9em;
  line-height: 1.33em;

  .ui-datatable-thead > tr th {
    padding: .625em .875em;
    background-color: #66ACE2;
    border-top: #66ace2;
    border: #BAD9F1 solid 1px;
    text-transform: uppercase;
    font-size: 0.95em;
    color: #1c333d;
    line-height: 1.33em;
    overflow: hidden;
  }

  &.ui-datatable-scrollable thead tr th {
    color: #1c333d;
    font-size: 0.95em;
  }
}

// DROPDOWN ---------------------
.big-dropdown {
  font-size: 1.7em;
  font-weight: 300;
  text-transform: uppercase;
  color: #0277BD !important;
  width: 100% !important;

  label.ui-dropdown-label {
    text-align: center;
  }
}

body .ui-dropdown-panel .ui-dropdown-item {
  font-size: 18px;
}


// LISTBOX ----------------------
.data-items-listbox {
  height: 285px;
  width: 100%;
  overflow: scroll;
}

// INPUT TEXT --------------------
body .big-search .ui-inputtext {
  background: transparent;
  border-width: 0 0 1px 0;
  padding: 2px 2px 1px 2px;
  font-size: 1.75em;
  color: #0277BD !important;
  border-color: #bdbdbd;
  border-style: solid;
  border-radius: 0px;
}

// HELPERS -----------------------
.w-150{
  width: 150px;
}
.w-167{
  width: 167px;
}

// CALENDAR & TIME PICKER ---------

body .time-picker .ui-widget {
  width: 160px;

  .ui-timepicker.ui-widget-header {
    padding-bottom: 0;
    padding-right: 12px;
    font-weight: 700;
    background-color: #1A87BF;
  }
}

// mat-selection-list ---------------
mat-selection-list.items-list {
  max-height: 368px;
  overflow: auto;
}

.custom-ac-label1 {
  line-height: 20px;
}
.custom-ac-label2 {
  font-size: 0.7em;
  color: #777;
  // line-height: 20px;
  margin-top: -17px;
}

